Fix custom scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,37 +28,34 @@
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
-
-.custom-scrollbar {
-  /* Ensure the element scrolls */
-  overflow: auto;
-}
-
+/* Webkit browsers like Chrome, Safari */
 .custom-scrollbar::-webkit-scrollbar {
-  width: 8px; /* Set the width of the scrollbar */
+  width: 9px;
 }
 
 .custom-scrollbar::-webkit-scrollbar-track {
-  background: transparent; /* Make the scrollbar track background transparent */
+  background-color: transparent;
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: var(--card); /* Color of the scrollbar thumb */
-  border-radius: 10px; /* Make it rounded */
+  background-color: #c1c1c1;
+  border-radius: 100px;
+  border: 2px solid #f0f0f0;
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(0, 0, 0, 0.6); /* Darker thumb when hovering */
+  background-color: #a8a8a8;
 }
 
-.custom-scrollbar::-webkit-scrollbar-button {
-  display: none; /* Remove arrows from scrollbar */
-}
-
-/* For Firefox */
+/* Firefox */
 .custom-scrollbar {
-  scrollbar-width: thin; /* Thin scrollbar */
-  scrollbar-color: var(--card) transparent; /* Thumb color and transparent background */
+  scrollbar-width: thin;
+  scrollbar-color: #c1c1c1 transparent;
+}
+
+/* For Internet Explorer and Edge */
+.custom-scrollbar {
+  -ms-overflow-style: -ms-autohiding-scrollbar;
 }
 
 body {
